--- a/FlaskApp/.flaskenv.template
+++ b/FlaskApp/.flaskenv.template
@@ -1,3 +1,3 @@
 FLASK_APP=__init__.py
 FLASK_DEBUG="1"
-sql_alchemy_uri = "UsernameAndPassword"
+SQLALCHEMY_DATABASE_URI = 'postgresql://postgres:postgres@localhost/postgres'
