--- a/FlaskApp/.flaskenv.template
+++ b/FlaskApp/.flaskenv.template
@@ -1,3 +1,5 @@
 FLASK_APP=__init__.py
 FLASK_DEBUG="1"
 SQLALCHEMY_DATABASE_URI = 'postgresql://postgres:postgres@localhost/postgres'
+SECRET_KEY="REPLACE_THIS_WITH_A_SECRET_KEY_USED_BY_FLASK"
+SECRET_PASSWORD="THIS_PASSWORD_IS_USED_FOR_ENABLING_REGISTRATION"
