--- a/FlaskApp/requirements.txt
+++ b/FlaskApp/requirements.txt
@@ -1,6 +1,8 @@
 Click==7.0
 Flask==1.0.3
+Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
@@ -8,3 +10,4 @@ psycopg2==2.8.2
 python-dotenv==0.10.2
 SQLAlchemy==1.3.4
 Werkzeug==0.15.4
+WTForms==2.2.1
