--- a/FlaskApp/requirements.txt
+++ b/FlaskApp/requirements.txt
@@ -2,6 +2,7 @@ Click==7.0
 Flask==1.0.3
 Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.0
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
